--- a/lawn-basics/does-grass-grow-at-night.html
+++ b/lawn-basics/does-grass-grow-at-night.html
@@ -62,9 +62,10 @@
 <p>Different parts of a lawn behave differently. Sunny sections, edges, and watered zones stand out more quickly. This creates the illusion that certain areas grow faster.</p>
 <p>Hard surfaces make these differences more noticeable. Driveway edges often look worse or different from the rest of the yard. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains these patterns, so the takeaway is to expect uneven behavior near pavement.</p>
 
-<h2>How mowing changes what you notice</h2>
-<p>Mowing resets the lawn’s appearance. After a cut, even small changes seem dramatic. This makes growth feel faster than it really is.</p>
-<p>Over time, repeated mowing shapes how the lawn looks and ages. Some lawns slowly thin year by year. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> explains this process, so the takeaway is to focus on long-term trends.</p>
+<h2>Mowing alters visual baselines</h2>
+<p>Cutting resets surface uniformity, making small deviations stand out more sharply. Changes appear dramatic immediately after mowing even when actual growth rates remain unchanged.</p>
+<p>Repeated cutting gradually shapes lawn density and structure over time. Some surfaces thin incrementally across seasons rather than failing abruptly. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> outlines how these long-term patterns develop and why trend evaluation matters more than short-term appearance.</p>
+
 
 <h2>What happens below the surface after mowing</h2>
 <p>Mowing affects more than just height. How often and how short you cut influences how evenly the lawn recovers. Poor mowing habits slow that recovery.</p>
