--- a/tools-safety/how-cold-affects-tool-safety.html
+++ b/tools-safety/how-cold-affects-tool-safety.html
@@ -60,9 +60,10 @@
   <p>Low temperatures dull nerve response long before muscles feel weak. As tactile feedback fades, precision drops suddenly without clear warning.</p>
   <p>Your hands feel capable but oddly disconnected from the tool.</p>
 
-  <h2>Grip pressure becomes uneven</h2>
-  <p>Numb fingers overcorrect by squeezing harder or looser than intended. Control shifts in small jumps instead of smooth motion.</p>
-  <p>You notice white knuckles or slipping handles.</p>
+  <h2>Grip pressure shifts erratically</h2>
+  <p>Numb fingers force compensation through excessive tightening or unintended release. Control changes occur in abrupt steps rather than continuous movement.</p>
+  <p>Handles show compression marks, blanching appears at the knuckles, or tools slip despite increased force.</p>
+
 
   <h2>Delayed sensation hides early errors</h2>
   <p>Cold slows the signal that something feels wrong. By the time discomfort registers, the movement has already finished.</p>
