--- a/tools-safety/how-experience-reduces-tool-damage.html
+++ b/tools-safety/how-experience-reduces-tool-damage.html
@@ -68,9 +68,10 @@
   <p>Experience favors pacing over pressure. Allowing tools to work at their rhythm reduces internal wear.</p>
   <p>The machine feels smoother instead of strained.</p>
 
-  <h2>Awareness reduces secondary damage</h2>
-  <p>Controlling stress also protects surrounding systems like belts, bearings, and housings. One correction prevents multiple failures.</p>
-  <p>You notice fewer loose parts and rattles after use.</p>
+  <h2>Situational awareness limits secondary damage</h2>
+  <p>Managing stress at the source reduces load transfer into adjacent components such as belts, bearings, and housings. A single timely correction interrupts failure chains before they spread.</p>
+  <p>Post-use inspection shows tightened fasteners, stable housings, and reduced vibration during operation.</p>
+
 
   <h2>Sensory cues guide safer operation</h2>
   <p>Sound and feel carry most warning signals. Ignoring them accelerates breakdown.</p>
