--- a/tools-safety/how-fatigue-leads-to-accidents.html
+++ b/tools-safety/how-fatigue-leads-to-accidents.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>How Fatigue Leads to Accidents</h1>
 
-  <h2>Fatigue begins before the body feels weak</h2>
-  <p>Most accidents begin when awareness stops refreshing even though the body keeps moving. When mental recovery lags, control erodes quietly before anything feels wrong.</p>
-  <p>You notice yourself rereading the same area of grass or path without realizing it.</p>
+  <h2>Fatigue develops ahead of perceived weakness</h2>
+  <p>Many accidents originate when cognitive refresh slows while physical motion continues. As mental recovery falls behind ongoing activity, control degrades gradually without immediate physical warning.</p>
+  <p>Work patterns begin repeating over the same area, paths are retraced unnecessarily, and progress stalls despite continued effort.</p>
+
 
   <h2>Reaction time stretches without notice</h2>
   <p>Tired awareness adds small delays to every response. Those delays stack until timing no longer matches movement.</p>
