--- a/tools-safety/how-long-lawn-tools-typically-last.html
+++ b/tools-safety/how-long-lawn-tools-typically-last.html
@@ -60,9 +60,10 @@
   <p>Lawn tools fail in function before they fail mechanically. The governing threshold is tolerance integrity, and once it erodes, consistency disappears.</p>
   <p>You feel the tool drift instead of tracking straight.</p>
 
-  <h2>Wear accumulates through normal use</h2>
-  <p>Every session removes a small amount of alignment, sharpness, or balance. The process is gradual and easy to miss.</p>
-  <p>You notice results declining without a clear break.</p>
+  <h2>Wear builds gradually during routine operation</h2>
+  <p>Each use removes small amounts of alignment, sharpness, or balance. The change occurs incrementally, making degradation difficult to pinpoint to a single event.</p>
+  <p>Performance declines steadily over time without a distinct moment of failure.</p>
+
 
   <h2>Power hides early decline</h2>
   <p>Motors compensate for loss by pushing harder. Output appears normal while precision fades.</p>
