--- a/tools-safety/how-poor-visibility-causes-accidents.html
+++ b/tools-safety/how-poor-visibility-causes-accidents.html
@@ -64,9 +64,9 @@
   <p>Uneven light flattens surfaces and hides movement. Objects appear farther away or slower than they are.</p>
   <p>You misjudge how close the tool is to your foot or hand.</p>
 
-  <h2>Obstructions remove peripheral awareness</h2>
-  <p>Grass, debris, and equipment block side vision. Hazards approach from angles the eyes no longer track.</p>
-  <p>You notice something only when it enters your direct line of sight.</p>
+  <h2>Obstructions eliminate peripheral awareness</h2>
+  <p>Vegetation, debris, and equipment restrict side vision and narrow the effective field of view. Hazards approach from angles that are no longer visually monitored.</p>
+  <p>Objects or people become apparent only after crossing into direct forward vision, indicating reduced peripheral coverage.</p>
 
   <h2>Motion continues when sight hesitates</h2>
   <p>Hands and machines keep moving even as the brain waits for clarity. That delay locks in mistakes.</p>
