--- a/tools-safety/how-repetitive-motion-damages-joints.html
+++ b/tools-safety/how-repetitive-motion-damages-joints.html
@@ -60,9 +60,10 @@
   <p>Joint wear begins long before sharp pain shows up. The rate-limiting capacity is tissue recovery capacity, and once identical motions outpace it, stress stacks silently.</p>
   <p>You feel mild stiffness that fades slower each time you stop.</p>
 
-  <h2>Identical angles concentrate pressure</h2>
-  <p>Repeating the same arc loads the same surfaces again and again. No area gets relief.</p>
-  <p>You notice soreness in one specific spot every session.</p>
+  <h2>Repeated angles concentrate stress</h2>
+  <p>Running the same arc loads identical surfaces on every pass. Without variation, force accumulates in one area while surrounding regions receive no relief.</p>
+  <p>Pain or tenderness appears in the same localized spot after each session, indicating uneven load distribution.</p>
+
 
   <h2>Grip repetition transmits force upstream</h2>
   <p>Hands absorb vibration and pass it into wrists and elbows. The chain stays active without variation.</p>
