--- a/tools-safety/how-small-injuries-turn-serious.html
+++ b/tools-safety/how-small-injuries-turn-serious.html
@@ -60,9 +60,10 @@
   <p>Minor injuries become dangerous when the body is stressed again before it settles. The governing recovery point is tissue recovery, and once it is bypassed, damage stacks instead of clearing.</p>
   <p>You feel soreness that never fully fades between sessions.</p>
 
-  <h2>Repeated motion reopens the same damage</h2>
-  <p>Small strains flare when the same movement returns too soon. The area weakens instead of strengthening.</p>
-  <p>You notice the same spot aching every time you work.</p>
+  <h2>Repetitive movement reactivates existing damage</h2>
+  <p>Minor strains resurface when identical motions resume before tissue has stabilized. Instead of adapting, the affected area loses resilience with each recurrence.</p>
+  <p>Discomfort consistently localizes to the same region across sessions, indicating unresolved stress rather than new injury.</p>
+
 
   <h2>Compensation shifts load elsewhere</h2>
   <p>To avoid discomfort, movement changes slightly. New areas absorb stress they were not meant to handle.</p>
@@ -88,9 +89,10 @@
   <p>Once fibers tear or joints destabilize, recovery cannot keep pace with use. The condition advances on its own.</p>
   <p>You feel sharp pain during normal movement.</p>
 
-  <h2>After the boundary, daily tasks trigger symptoms</h2>
-  <p>Activities that once felt easy now provoke pain. Rest no longer resets function.</p>
-  <p>You notice stiffness even outside yard work.</p>
+  <h2>Everyday activity begins provoking symptoms</h2>
+  <p>Tasks that previously required minimal effort start producing pain or dysfunction. Recovery periods no longer restore baseline capability.</p>
+  <p>Stiffness or discomfort persists during routine daily movement, including periods unrelated to yard work.</p>
+
 
   <h2>Serious injury leaves clear signals</h2>
   <p>Persistent pain, reduced range, and guarded movement show how small damage escalated. The body records every shortcut.</p>
