--- a/tools-safety/how-to-reduce-injury-risk-while-working.html
+++ b/tools-safety/how-to-reduce-injury-risk-while-working.html
@@ -68,10 +68,11 @@
   <p>Different machines demand different levels of feedback and timing. Some allow smoother correction than others.</p>
   <p>This contrast appears in <a href="/tools-safety/electric-vs-gas-lawn-equipment.html">Electric vs Gas Lawn Equipment</a>, where response speed changes outcomes.</p>
 
-  <h2>Wear increases effort without looking dramatic</h2>
-  <p>As tools degrade, they require more force to do the same job. The body absorbs the difference.</p>
-  <p>You notice tasks feeling heavier even though nothing changed.</p>
+  <h2>Rising wear quietly raises required effort</h2>
+  <p>Tool degradation forces additional force to achieve the same output. The added demand transfers directly into the body rather than showing as obvious equipment failure.</p>
+  <p>Tasks require more exertion despite unchanged conditions, materials, or workflow.</p>
 
+  
   <h2>Fatigue narrows the margin for error</h2>
   <p>As recovery falls behind, timing slips. Movements stay confident while precision drops.</p>
   <p>You feel slower to react to small changes.</p>
