--- a/tools-safety/how-tool-failure-delays-lawn-recovery.html
+++ b/tools-safety/how-tool-failure-delays-lawn-recovery.html
@@ -60,10 +60,11 @@
   <p>Lawn recovery depends on uniform, predictable contact. The governing consistency factor is contact consistency, and once tools fail to deliver it, stress accumulates instead of healing.</p>
   <p>You see irregular damage patterns instead of even regrowth.</p>
 
-  <h2>Failure creates uneven stress zones</h2>
-  <p>Malfunctioning tools strike some areas harder than others. Grass responds unevenly.</p>
-  <p>You notice stripes, patches, or frayed edges.</p>
+  <h2>Malfunction produces uneven stress patterns</h2>
+  <p>Impaired equipment delivers force inconsistently, concentrating impact in some areas while sparing others. The surface responds irregularly rather than uniformly.</p>
+  <p>Striping, patchiness, or frayed margins appear where load concentration exceeds surrounding areas.</p>
 
+  
   <h2>Damage continues while repair is delayed</h2>
   <p>Using failing equipment extends exposure. Each pass compounds injury.</p>
   <p>The lawn looks worse after each attempt to finish.</p>
