--- a/tools-safety/how-tool-guards-actually-protect-users.html
+++ b/tools-safety/how-tool-guards-actually-protect-users.html
@@ -80,10 +80,11 @@
   <p>Incorrect angles and force raise the chance of sudden reversal. Guards become the last control left.</p>
   <p>The same chain appears in <a href="/tools-safety/how-tool-misuse-damages-lawns.html">How Tool Misuse Damages Lawns</a>, where error multiplies damage.</p>
 
-  <h2>Partial coverage still reduces injury</h2>
-  <p>Even incomplete barriers intercept the worst trajectories. They buy distance and time.</p>
-  <p>You notice impact marks on plastic instead of skin.</p>
+  <h2>Incomplete coverage still mitigates injury</h2>
+  <p>Even partial barriers intercept high-energy trajectories and deflect debris away from the body. This separation increases reaction time and reduces direct transfer of force.</p>
+  <p>Scoring, dents, or marks appear on protective surfaces rather than on exposed skin.</p>
 
+  
   <h2>The irreversible boundary is unguarded contact</h2>
   <p>Once force reaches the body directly, recovery is no longer possible mid-event. The outcome is set.</p>
   <p>You feel pain immediately instead of pressure.</p>
