--- a/tools-safety/how-tool-noise-affects-awareness.html
+++ b/tools-safety/how-tool-noise-affects-awareness.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>How Tool Noise Affects Awareness</h1>
 
-  <h2>Awareness drops when sound overwhelms cues</h2>
-  <p>Continuous machine noise removes subtle signals that confirm position and timing. The dominant sensory barrier is auditory masking, and once it dominates, movement continues without reliable reference.</p>
-  <p>You notice the world feel flatter and harder to place.</p>
+  <h2>Excess noise suppresses positional awareness</h2>
+  <p>Continuous machine output masks subtle auditory cues that normally confirm distance, timing, and orientation. When masking dominates, movement continues without reliable sensory reference.</p>
+  <p>Spatial cues blur, depth perception degrades, and relative position becomes harder to judge during operation.</p>
+
 
   <h2>Direction becomes harder to judge</h2>
   <p>Loud, steady sound erases differences between near and far. Approach speed feels slower than it is.</p>
@@ -88,9 +89,10 @@
   <p>Even passes sound even when noise saturates. Output varies without an audible cue.</p>
   <p>This parallels <a href="/tools-safety/broadcast-vs-drop-spreaders-explained.html">Broadcast vs Drop Spreaders Explained</a>, where pattern depends on feedback.</p>
 
-  <h2>Environmental cues disappear during auditory loss</h2>
-  <p>Once sound can no longer signal change, recovery is not possible mid-motion. The next correction arrives after commitment.</p>
-  <p>You notice the mistake only after contact.</p>
+  <h2>Auditory loss removes real-time environmental feedback</h2>
+  <p>When sound no longer signals changes in position or load, adjustment cannot occur during motion. Corrective input arrives only after movement has already committed.</p>
+  <p>Errors become apparent only following impact, contact, or visible consequence.</p>
+
 
   <h2>After the boundary, awareness narrows to impact</h2>
   <p>Only vibration and sight remain, and both lag. Errors compound before they are seen.</p>
