--- a/tools-safety/how-tool-quality-impacts-safety.html
+++ b/tools-safety/how-tool-quality-impacts-safety.html
@@ -60,9 +60,10 @@
   <p>Tools become dangerous when they stop responding the same way every time. The reliability threshold is response consistency, and once it breaks, timing and control collapse.</p>
   <p>You feel unsure how the tool will react on each pass.</p>
 
-  <h2>Lower quality removes clear feedback</h2>
-  <p>Cheap components dampen sound and feel unevenly. Warnings arrive too late.</p>
-  <p>You notice surprises instead of gradual buildup.</p>
+  <h2>Inferior components suppress usable feedback</h2>
+  <p>Low-quality materials absorb vibration and sound inconsistently, reducing early warning signals. Feedback becomes delayed or distorted rather than gradual and informative.</p>
+  <p>Problems present as sudden events instead of building progressively through recognizable cues.</p>
+
 
   <h2>Inconsistent tolerances amplify movement</h2>
   <p>Loose fits allow sudden shifts under load. Force jumps without warning.</p>
