--- a/tools-safety/how-tool-wear-affects-results.html
+++ b/tools-safety/how-tool-wear-affects-results.html
@@ -60,9 +60,10 @@
   <p>Most tools lose accuracy long before they stop working. The governing accuracy ceiling is precision retention, and once it fades, effort fills the gap.</p>
   <p>You see acceptable motion but disappointing outcomes.</p>
 
-  <h2>Worn edges replace clean action with drag</h2>
-  <p>As surfaces round and dull, contact shifts from cutting to tearing. The work still happens, but quality drops.</p>
-  <p>You notice frayed edges and uneven finishes.</p>
+  <h2>Dulled edges convert clean action into drag</h2>
+  <p>As contact surfaces round and lose definition, interaction shifts from controlled cutting to tearing and friction. Output continues, but precision and consistency decline.</p>
+  <p>Edges appear frayed, finishes vary, and resistance increases despite unchanged technique.</p>
+
 
   <h2>Alignment drift changes where force lands</h2>
   <p>Small wear in joints and mounts redirects pressure. Results vary pass to pass without obvious cause.</p>
