--- a/tools-safety/how-yard-accidents-can-be-prevented.html
+++ b/tools-safety/how-yard-accidents-can-be-prevented.html
@@ -76,10 +76,11 @@
   <p>More expensive tools still fail when used beyond their limits. Safety depends on response, not price.</p>
   <p>This reflects <a href="/tools-safety/why-expensive-tools-arent-always-better.html">Why Expensive Tools Aren’t Always Better</a>, where assumptions replace judgment.</p>
 
-  <h2>Fatigue reduces correction speed</h2>
-  <p>Tired muscles and attention slow response to changes. Recovery time disappears.</p>
-  <p>You notice delayed reactions to small slips.</p>
+  <h2>Fatigue slows corrective response</h2>
+  <p>Muscular exhaustion and reduced attention increase reaction time to changing conditions. The window for adjustment narrows until recovery cannot occur between movements.</p>
+  <p>Minor slips or misalignments persist longer before correction, indicating slowed response.</p>
 
+  
   <h2>Environment shifts faster than perception</h2>
   <p>Grass density, slope, moisture, and debris alter resistance suddenly. Familiar conditions turn unfamiliar.</p>
   <p>The surface reacts differently than expected.</p>
