--- a/tools-safety/mistakes-that-increase-injury-risk.html
+++ b/tools-safety/mistakes-that-increase-injury-risk.html
@@ -64,9 +64,10 @@
   <p>Tools communicate through sound and feel. Overriding those signals erases advance notice.</p>
   <p>You feel sudden jolts instead of gradual buildup.</p>
 
-  <h2>Poor positioning amplifies force</h2>
-  <p>Awkward stance or reach shifts load into unstable angles. Balance erodes quietly.</p>
-  <p>You notice your feet adjusting mid-motion.</p>
+  <h2>Improper positioning magnifies applied force</h2>
+  <p>An unstable stance or extended reach redirects load into weaker angles, increasing stress without increasing output. Balance degrades gradually rather than failing at once.</p>
+  <p>Foot placement changes mid-motion as the body attempts to compensate for shifting load.</p>
+
 
   <h2>Kickback follows accumulated errors</h2>
   <p>Sudden rebounds rarely come from one cause. They emerge after alignment, grip, and timing slip together.</p>
