--- a/tools-safety/mistakes-that-shorten-tool-life.html
+++ b/tools-safety/mistakes-that-shorten-tool-life.html
@@ -60,10 +60,11 @@
   <p>Tools fail early when repeated stress does not have time to settle. The recovery ceiling is stress recovery, and once it is exceeded, wear stacks instead of clearing.</p>
   <p>You feel heat, drag, or resistance building faster each session.</p>
 
-  <h2>Pushing through resistance deforms components</h2>
-  <p>Forcing tools through binding or dense material changes internal alignment. The tool adapts by wearing unevenly.</p>
-  <p>You notice new vibration after pushing harder.</p>
+  <h2>Forcing resistance distorts internal alignment</h2>
+  <p>Driving tools through binding or dense material redirects load into components not designed to carry it. Alignment shifts incrementally as wear concentrates along unintended paths.</p>
+  <p>New vibration, noise, or irregular motion appears after increased force is applied.</p>
 
+  
   <h2>Sudden load changes damage internal tolerance</h2>
   <p>Impacts and jolts transmit shock through shafts and mounts. Small shifts become permanent.</p>
   <p>This mirrors <a href="/tools-safety/how-tool-kickback-happens.html">How Tool Kickback Happens</a>, where force rebounds unexpectedly.</p>
