--- a/tools-safety/when-hiring-help-is-the-safer-option.html
+++ b/tools-safety/when-hiring-help-is-the-safer-option.html
@@ -76,10 +76,11 @@
   <p>Soil density and surface resistance change outcomes instantly. Minor misjudgments carry heavier consequences.</p>
   <p>This mirrors <a href="/tools-safety/difference-between-spike-and-core-aerators.html">Difference Between Spike and Core Aerators</a>, where contact method decides impact.</p>
 
-  <h2>Fatigue accelerates decision loss</h2>
-  <p>Long sessions drain attention faster than expected. Reaction time narrows without warning.</p>
-  <p>You notice delayed responses to simple shifts.</p>
+  <h2>Fatigue accelerates decision degradation</h2>
+  <p>Extended sessions deplete attention reserves more quickly than anticipated. As cognitive load accumulates, reaction windows narrow without producing clear warning signals.</p>
+  <p>Responses to routine changes slow measurably, and simple adjustments occur later than required to maintain control.</p>
 
+  
   <h2>Scale hides emerging hazards</h2>
   <p>Larger areas mean hazards appear faster than they can be tracked. Awareness falls behind movement.</p>
   <p>You miss obstacles you already passed once.</p>
