--- a/tools-safety/when-repairs-make-more-sense-than-replacement.html
+++ b/tools-safety/when-repairs-make-more-sense-than-replacement.html
@@ -60,9 +60,10 @@
   <p>Not all performance loss means a tool is finished. The underlying load-bearing state is structural integrity, and when it remains intact, targeted fixes restore function.</p>
   <p>You see one clear issue instead of widespread failure.</p>
 
-  <h2>Isolated wear produces consistent symptoms</h2>
-  <p>Blades, belts, cables, or bearings fail in predictable ways. Output degrades but does not collapse.</p>
-  <p>You notice the same problem repeating every use.</p>
+  <h2>Localized wear creates repeatable symptoms</h2>
+  <p>Components such as blades, belts, cables, or bearings degrade along specific paths. Performance declines in a consistent pattern rather than failing abruptly.</p>
+  <p>The same malfunction appears during each operation, indicating a persistent mechanical source rather than random variation.</p>
+
 
   <h2>Restoring one component resets performance</h2>
   <p>Replacing a single worn part can bring alignment and response back into range. The rest of the tool responds immediately.</p>
