--- a/tools-safety/when-tools-are-the-real-problem.html
+++ b/tools-safety/when-tools-are-the-real-problem.html
@@ -60,9 +60,10 @@
   <p>Work feels harder without producing better outcomes. The efficiency breakpoint is force transfer accuracy, and once tools cannot deliver it, results plateau.</p>
   <p>You work longer but see no visible improvement.</p>
 
-  <h2>Repeated passes fail to change conditions</h2>
-  <p>When tools cannot interact correctly, repetition only adds stress. The surface absorbs damage instead of correction.</p>
-  <p>You notice the same problem areas remain unchanged.</p>
+  <h2>Additional passes no longer alter conditions</h2>
+  <p>When tools lose effective interaction, repeated movement increases load without producing improvement. Stress accumulates in the surface rather than resolving the underlying issue.</p>
+  <p>Problem areas remain unchanged despite continued effort, indicating interaction failure rather than insufficient coverage.</p>
+
 
   <h2>Feedback becomes unreliable</h2>
   <p>Sound, vibration, and resistance stop matching results. The tool feels active while output lags.</p>
