--- a/tools-safety/when-yard-work-causes-more-harm-than-good.html
+++ b/tools-safety/when-yard-work-causes-more-harm-than-good.html
@@ -64,9 +64,10 @@
   <p>Each extra pass compounds minor misalignment. The surface absorbs stress faster than it recovers.</p>
   <p>You see scuffed patches where work was repeated.</p>
 
-  <h2>Tools magnify mistakes at the edge</h2>
-  <p>Rotating parts and fixed paths punish slight angle changes. Output looks aggressive but uneven.</p>
-  <p>You notice chatter marks or torn edges.</p>
+  <h2>Edge zones amplify minor errors</h2>
+  <p>Rotating components and constrained paths increase sensitivity to small angle changes. Force concentrates along margins, producing aggressive but inconsistent results.</p>
+  <p>Chatter marks, tearing, or irregular edges appear where alignment varies slightly.</p>
+
 
   <h2>Hidden hazards stack during long sessions</h2>
   <p>Loose debris, cords, and uneven footing accumulate unnoticed. Exposure rises with time on task.</p>
