--- a/tools-safety/when-yard-work-should-be-stopped.html
+++ b/tools-safety/when-yard-work-should-be-stopped.html
@@ -60,9 +60,10 @@
   <p>Yard work only stays safe while movement remains deliberate. The attentional threshold is controllable awareness, and once it fades, mistakes compound faster than they can be corrected.</p>
   <p>You feel movements becoming rushed instead of steady.</p>
 
-  <h2>Environmental signals shift before danger looks obvious</h2>
-  <p>Light, moisture, and surface conditions change how tools behave. These shifts appear subtly before they cause trouble.</p>
-  <p>You notice footing or grip no longer feels predictable.</p>
+  <h2>Environmental signals shift ahead of visible danger</h2>
+  <p>Changes in light, moisture, or surface condition alter tool interaction before risk becomes visually obvious. These variables affect behavior incrementally rather than abruptly.</p>
+  <p>Footing or grip begins behaving inconsistently, indicating altered conditions even though the scene appears unchanged.</p>
+
 
   <h2>Tool feedback grows inconsistent</h2>
   <p>Vibration, sound, or resistance changes when equipment stops behaving normally. That inconsistency demands attention the body may not have.</p>
