--- a/tools-safety/why-cheap-safety-gear-fails.html
+++ b/tools-safety/why-cheap-safety-gear-fails.html
@@ -84,9 +84,10 @@
   <p>Cheap gear pinches, fogs, or rubs. Users adjust or remove it mid-task.</p>
   <p>This aligns with <a href="/tools-safety/why-eye-protection-is-ignored.html">Why Eye Protection Is Ignored</a>, where friction defeats intent.</p>
 
-  <h2>Substance integrity deteriorates under stress</h2>
-  <p>Once straps stretch, lenses cloud, or padding compresses permanently, protection cannot be restored. Failure is locked in.</p>
-  <p>You notice permanent looseness or haze.</p>
+  <h2>Material integrity degrades under sustained stress</h2>
+  <p>When straps elongate, lenses lose clarity, or padding remains compressed, protective function cannot return to baseline. Deformation becomes permanent rather than recoverable.</p>
+  <p>Loosened fit, reduced clarity, or flattened cushioning remains present even after rest or adjustment.</p>
+
 
   <h2>After the boundary, compensation replaces protection</h2>
   <p>Users change posture or rush to finish instead of relying on gear. Exposure rises.</p>
