--- a/tools-safety/why-disabling-safety-features-is-dangerous.html
+++ b/tools-safety/why-disabling-safety-features-is-dangerous.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>Why Disabling Safety Features Is Dangerous</h1>
 
-  <h2>Danger begins when the last buffer is removed</h2>
-  <p>Safety features exist for moments when control disappears. The final buffer is reaction time, and once it is exceeded, nothing remains to slow force.</p>
-  <p>You notice how close moving parts suddenly feel.</p>
+  <h2>Risk escalates once the final buffer disappears</h2>
+  <p>Safety systems compensate for brief losses of control. Reaction time functions as the last remaining buffer, and when demands exceed it, force transfers directly without delay.</p>
+  <p>Clearance between moving components and the body compresses rapidly, leaving minimal separation before contact.</p>
+
 
   <h2>Normal operation hides how fast failure arrives</h2>
   <p>Tools behave predictably until they don’t. Disabling protection assumes consistency that never lasts.</p>
@@ -76,9 +77,10 @@
   <p>Weather weakens materials and alters movement. Disabled features remove protection just as reliability declines.</p>
   <p>This pattern mirrors <a href="/tools-safety/how-weather-damages-yard-tools.html">How Weather Damages Yard Tools</a>, where decay hides until use.</p>
 
-  <h2>Convenience replaces containment</h2>
-  <p>Removing guards often feels like saving effort. The tradeoff is direct exposure to motion and debris.</p>
-  <p>You notice parts spinning freely where they used to be blocked.</p>
+  <h2>Convenience displaces physical containment</h2>
+  <p>Guard removal reduces setup effort but eliminates barriers that control motion and deflect debris. Exposure increases as mechanical movement remains unrestricted.</p>
+  <p>Rotating or reciprocating parts remain visible and unshielded in areas that were previously enclosed.</p>
+
 
   <h2>Manual alternatives expose fewer failure paths</h2>
   <p>Some tasks carry less stored energy by design. Removing safety from powered tools erases that difference.</p>
