--- a/tools-safety/why-equipment-problems-compound-lawn-issues.html
+++ b/tools-safety/why-equipment-problems-compound-lawn-issues.html
@@ -60,9 +60,10 @@
   <p>Equipment issues matter most because they repeat with every pass. The calibration boundary is corrective precision, and once it drops, effort adds stress instead of improvement.</p>
   <p>You see the same areas worsen after each attempt to fix them.</p>
 
-  <h2>Inconsistent contact creates uneven recovery</h2>
-  <p>Misfiring or misaligned tools strike grass differently across the surface. Recovery starts at different speeds.</p>
-  <p>You notice stripes, patches, or uneven color.</p>
+  <h2>Uneven contact produces staggered recovery</h2>
+  <p>Misalignment or irregular firing causes force to distribute inconsistently across the surface. Some areas receive adequate interaction while others experience excessive or insufficient load.</p>
+  <p>Recovery appears patchy, with visible striping, uneven coloration, or delayed regrowth in affected zones.</p>
+
 
   <h2>Balance errors spread force unpredictably</h2>
   <p>When weight distribution is off, pressure shifts mid-pass. Control fades even when technique feels steady.</p>
