--- a/tools-safety/why-heat-increases-accident-risk.html
+++ b/tools-safety/why-heat-increases-accident-risk.html
@@ -64,9 +64,10 @@
   <p>Moisture reduces friction at the hands and feet. Control depends on constant adjustment instead of stability.</p>
   <p>Handles feel slick and footing feels uncertain.</p>
 
-  <h2>Reaction time stretches under heat load</h2>
-  <p>Heat slows processing while muscles keep working. Timing slips without obvious warning.</p>
-  <p>You notice a delay between seeing and responding.</p>
+  <h2>Heat stress lengthens reaction intervals</h2>
+  <p>Elevated temperature impairs cognitive processing while muscular activity continues. Coordination drifts as timing delays accumulate without clear physical warning.</p>
+  <p>A measurable pause appears between visual input and physical response, even during simple adjustments.</p>
+
 
   <h2>Fatigue masks rising error rates</h2>
   <p>As heat builds, awareness narrows to finishing the task. Mistakes feel isolated instead of connected.</p>
