--- a/tools-safety/why-improper-lifting-causes-back-injuries.html
+++ b/tools-safety/why-improper-lifting-causes-back-injuries.html
@@ -60,9 +60,10 @@
   <p>Lifting problems begin before weight feels heavy. The alignment breakpoint is spinal alignment, and once force shifts off that line, tissue absorbs stress unevenly.</p>
   <p>You feel a tight pull instead of a clean rise.</p>
 
-  <h2>Twisting turns weight into leverage</h2>
-  <p>Rotation multiplies force without adding weight. The back becomes the hinge.</p>
-  <p>You notice pressure spike on one side as you turn.</p>
+  <h2>Rotation converts load into leverage</h2>
+  <p>Rotational movement amplifies applied force without increasing mass. The spine and hips act as pivot points, concentrating stress along asymmetrical paths.</p>
+  <p>Uneven loading becomes evident through localized pressure buildup on one side during turning motion.</p>
+
 
   <h2>Distance from the body magnifies strain</h2>
   <p>Loads held away increase torque instantly. Control fades even with light items.</p>
