--- a/tools-safety/why-improper-tool-choice-wastes-time.html
+++ b/tools-safety/why-improper-tool-choice-wastes-time.html
@@ -60,9 +60,10 @@
   <p>Jobs slow down when the tool’s design fights the task instead of serving it. When the tool no longer matches the work, added effort replaces real progress.</p>
   <p>You feel busy without seeing the area change.</p>
 
-  <h2>Effort rises while output stays flat</h2>
-  <p>Incorrect tools demand repeated passes to achieve the same effect. Each pass consumes minutes without moving the result forward.</p>
-  <p>You notice the same section needing attention again.</p>
+  <h2>Input increases without corresponding progress</h2>
+  <p>Mismatched or ineffective tools require repeated passes to produce minimal change. Time and energy are consumed while results remain static.</p>
+  <p>The same area demands repeated attention despite continued effort.</p>
+
 
   <h2>Corrections interrupt flow</h2>
   <p>Stopping to adjust angle, depth, or pressure breaks momentum. Work becomes start-stop instead of continuous.</p>
