--- a/tools-safety/why-most-yard-injuries-are-avoidable.html
+++ b/tools-safety/why-most-yard-injuries-are-avoidable.html
@@ -76,9 +76,10 @@
   <p>Different setups shift load, speed, and fatigue. The same motion becomes more or less forgiving.</p>
   <p>This connects to <a href="/tools-safety/push-vs-self-propelled-mowers-explained.html">Push vs Self-Propelled Mowers Explained</a>, where effort moves the risk.</p>
 
-  <h2>Speed invites sloppy positioning</h2>
-  <p>Fast work compresses reaction time. One small misstep becomes a full mistake.</p>
-  <p>You notice your feet landing without thinking.</p>
+  <h2>Increased speed degrades positioning accuracy</h2>
+  <p>Accelerated work reduces available reaction time. Minor placement errors escalate quickly when movement outpaces correction.</p>
+  <p>Foot placement becomes automatic rather than deliberate, increasing the chance of misalignment.</p>
+
 
   <h2>Cleanup tasks hide the worst surprises</h2>
   <p>Debris shifts underfoot, objects get pulled into moving parts, and visibility drops. The work feels easy until it isn’t.</p>
