--- a/tools-safety/why-pets-are-at-risk-during-yard-work.html
+++ b/tools-safety/why-pets-are-at-risk-during-yard-work.html
@@ -72,9 +72,10 @@
   <p>Material travels past the operator’s position, breaking invisible lines. Exposure spreads without warning.</p>
   <p>You hear pebbles strike surfaces beyond where you’re standing.</p>
 
-  <h2>Ground-level paths intersect first</h2>
-  <p>Low trajectories meet pets before adults register them. Angle decides contact.</p>
-  <p>You notice debris skimming at head height for a smaller animal.</p>
+  <h2>Low trajectories intersect smaller targets first</h2>
+  <p>Debris and tool paths close to the ground reach pets or children before adults perceive the hazard. Contact risk is determined primarily by angle rather than speed.</p>
+  <p>Material travels at heights that align with the head or body of smaller animals before reaching adult eye level.</p>
+
 
   <h2>Assumed skill replaces active separation</h2>
   <p>Confidence in handling tools shifts attention away from space control. Distance gets treated as automatic.</p>
