--- a/tools-safety/why-proper-training-matters-for-homeowners.html
+++ b/tools-safety/why-proper-training-matters-for-homeowners.html
@@ -60,9 +60,10 @@
   <p>Most tools appear predictable until they are in motion. Without familiar behavior to guide expectations, force and timing feel different than anticipated.</p>
   <p>You feel surprised by how quickly the tool reacts once engaged.</p>
 
-  <h2>Untrained hands misread resistance</h2>
-  <p>Without context, resistance feels random instead of informative. Corrections arrive late or in the wrong direction.</p>
-  <p>You notice the tool pulling or stalling without understanding why.</p>
+  <h2>Inexperienced handling misinterprets resistance</h2>
+  <p>Without reference points, changes in resistance lack context and fail to guide timely adjustment. Responses occur late or counter to the actual load path.</p>
+  <p>Tools pull, bind, or stall in ways that remain unexplained, indicating resistance is being felt but not correctly interpreted.</p>
+
 
   <h2>Surface conditions change tool response</h2>
   <p>Soil density, moisture, and debris alter how tools bite and release. Training builds recognition of those shifts.</p>
