--- a/tools-safety/why-replacing-tools-fixes-lawn-issues.html
+++ b/tools-safety/why-replacing-tools-fixes-lawn-issues.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>Why Replacing Tools Fixes Lawn Issues</h1>
 
-  <h2>Improvement begins when contact becomes consistent again</h2>
-  <p>Many lawn problems persist because tools no longer interact cleanly with grass or soil. Once mechanical consistency degrades, added effort no longer translates into recovery.</p>
-  <p>You notice uneven results no matter how carefully you work.</p>
+  <h2>Recovery resumes once contact regains consistency</h2>
+  <p>Many lawn issues persist after tools lose clean, repeatable interaction with grass or soil. When mechanical consistency breaks down, additional effort increases stress without restoring proper engagement.</p>
+  <p>Results remain uneven across the surface despite controlled pace, uniform passes, and careful technique.</p>
+
 
   <h2>Worn components distort force application</h2>
   <p>Edges, bearings, and joints lose their original geometry. Force lands unevenly across the surface.</p>
@@ -88,9 +89,10 @@
   <p>Once components lose true shape or integrity, correction is impossible in use. Performance cannot return.</p>
   <p>You feel vibration or drag that never fully goes away.</p>
 
-  <h2>After the boundary, replacement is the only reset</h2>
-  <p>No adjustment restores original performance. Progress resumes only once the tool is changed.</p>
-  <p>You notice immediate improvement after the swap.</p>
+  <h2>Replacement becomes the only effective reset</h2>
+  <p>Once performance drops beyond recoverable adjustment, calibration and repair no longer restore original function. Progress returns only after the component or tool is replaced.</p>
+  <p>Output improves immediately following the change, confirming prior limitations were hardware-based.</p>
+
 
   <h2>Replaced tools leave visible recovery</h2>
   <p>Uniform cuts, steady growth, and faster rebound show where mechanical limits were removed. The lawn reflects the change.</p>
