--- a/tools-safety/why-rushing-causes-tool-injuries.html
+++ b/tools-safety/why-rushing-causes-tool-injuries.html
@@ -60,9 +60,10 @@
   <p>Speed compresses decisions until there is no room to adjust. As time tightens, normal correction disappears.</p>
   <p>You feel movements getting jerky instead of smooth.</p>
 
-  <h2>Fast motion outruns visual processing</h2>
-  <p>Hands start moving before the eyes fully register position. That gap grows with every attempt to go faster.</p>
-  <p>You notice tools arriving at spots before you expect them to.</p>
+  <h2>Rapid movement outpaces visual processing</h2>
+  <p>Motion begins before visual systems fully register position or trajectory. As speed increases, the gap between perception and action widens.</p>
+  <p>Tools reach target areas sooner than anticipated, indicating perception lag relative to movement.</p>
+
 
   <h2>Grip strength shifts under urgency</h2>
   <p>Rushing changes how tightly tools are held. Pressure spikes instead of staying steady.</p>
