--- a/tools-safety/why-safety-features-get-ignored.html
+++ b/tools-safety/why-safety-features-get-ignored.html
@@ -92,9 +92,11 @@
   <p>The mind finally assigns weight to the risk. Awareness arrives after the outcome is locked.</p>
   <p>You replay the moment realizing what was bypassed.</p>
 
-  <h2>Ignored features leave visible proof</h2>
-  <p>Scars, damaged parts, and altered habits mark where protection was optional until it was not. The evidence stays.</p>
-  <p>You notice the missing step every time afterward.</p>
+  <h2>Overlooked safeguards leave lasting evidence</h2>
+  <p>Scoring, broken components, and changed routines mark where protection was bypassed until consequences appeared. The physical record remains even after behavior changes.</p>
+  <p>The absence of the skipped measure becomes obvious during every subsequent use.</p>
+
+
 </main>
 
 <footer class="site-footer">
