--- a/tools-safety/why-safety-planning-is-ignored.html
+++ b/tools-safety/why-safety-planning-is-ignored.html
@@ -84,9 +84,10 @@
   <p>Phones, schedules, and interruptions pull focus away from preparation. Planning never fully forms.</p>
   <p>You split attention before work begins.</p>
 
-  <h2>Attention fades beyond perception</h2>
-  <p>Once attention drops during operation, recovery time vanishes. Reaction replaces prevention.</p>
-  <p>You notice danger only after moving.</p>
+  <h2>Mowing alters visual baselines</h2>
+  <p>Cutting resets surface uniformity, making small deviations stand out more sharply. Changes appear dramatic immediately after mowing even when actual growth rates remain unchanged.</p>
+  <p>Repeated cutting gradually shapes lawn density and structure over time. Some surfaces thin incrementally across seasons rather than failing abruptly. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> outlines how these long-term patterns develop and why trend evaluation matters more than short-term appearance.</p>
+
 
   <h2>After the boundary, risk multiplies</h2>
   <p>Without a plan, each unexpected event demands instant response. Errors stack quickly.</p>
