--- a/tools-safety/why-slopes-increase-tool-danger.html
+++ b/tools-safety/why-slopes-increase-tool-danger.html
@@ -60,9 +60,10 @@
   <p>Inclines change how weight loads the body before anything looks wrong. As balance margin narrows, recovery becomes delayed.</p>
   <p>You feel your stance working harder just to stay planted.</p>
 
-  <h2>Footing becomes reactive instead of stable</h2>
-  <p>Feet land to avoid sliding rather than to support movement. Every step becomes a correction.</p>
-  <p>You notice constant micro-adjustments instead of steady footing.</p>
+  <h2>Foot placement shifts from stability to reaction</h2>
+  <p>Steps are placed to prevent slipping rather than to support efficient movement. Each contact becomes a compensatory adjustment instead of a stable base.</p>
+  <p>Frequent micro-corrections replace consistent footing, indicating reduced ground reliability.</p>
+
 
   <h2>Tool weight shifts downhill</h2>
   <p>Gravity pulls equipment off its normal line. Control has to fight direction instead of guiding motion.</p>
