--- a/tools-safety/why-yard-work-causes-long-term-pain.html
+++ b/tools-safety/why-yard-work-causes-long-term-pain.html
@@ -60,9 +60,10 @@
   <p>Yard work applies small forces repeatedly without drawing attention. When recovery time can’t keep up with that repetition, damage builds quietly instead of healing.</p>
   <p>You feel mild soreness that no longer disappears by the next day.</p>
 
-  <h2>Repetition trains the body into stress patterns</h2>
-  <p>Using the same motions locks strain into joints and muscles. The body adapts to load, not comfort.</p>
-  <p>You notice stiffness returning in the same spots after every session.</p>
+  <h2>Repetitive motion conditions stress pathways</h2>
+  <p>Repeated movement patterns embed load into specific joints and muscle groups. Adaptation favors force tolerance over comfort, reinforcing the same strain routes with each session.</p>
+  <p>Stiffness reliably reappears in identical locations after work, indicating patterned load rather than incidental fatigue.</p>
+
 
   <h2>Tools concentrate force into narrow contact points</h2>
   <p>Handles, grips, and vibration focus pressure into hands, shoulders, and spine. Stress travels upward.</p>
