--- a/watering-irrigation/how-long-to-water-a-lawn-each-time.html
+++ b/watering-irrigation/how-long-to-water-a-lawn-each-time.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>How Long to Water a Lawn Each Time</h1>
 
-  <h2>Duration controls whether water stays useful</h2>
-  <p>Each watering session has a point where soil stops accepting moisture. Past that moment, added water spreads sideways or pools instead of feeding roots.</p>
-  <p>You notice runoff forming before the sprinklers shut off.</p>
+  <h2>Watering duration determines absorption efficiency</h2>
+  <p>Soil accepts moisture only up to a specific time threshold during each session. Beyond that point, additional water moves laterally or pools at the surface instead of penetrating toward roots.</p>
+  <p>Runoff or surface pooling appears before irrigation cycles end, indicating saturation has already been reached.</p>
+
 
   <h2>Absorption speed sets the ceiling</h2>
   <p>Soil takes in water gradually, not instantly. Applying it faster than that pace creates surface movement instead of depth.</p>
