--- a/watering-irrigation/signs-a-lawn-is-overwatered.html
+++ b/watering-irrigation/signs-a-lawn-is-overwatered.html
@@ -68,9 +68,10 @@
   <p>Excess moisture presses soil particles together, reducing air space. Water then exits more slowly each cycle.</p>
   <p>This aligns with <a href="/watering-irrigation/how-compacted-soil-affects-drainage.html">How Compacted Soil Affects Drainage</a>, where saturation hardens the ground.</p>
 
-  <h2>Standing moisture returns faster each time</h2>
-  <p>Areas that once drained begin holding water again and again. Recovery between waterings shortens.</p>
-  <p>You notice the same spots staying dark and wet.</p>
+  <h2>Persistent moisture reappears more quickly</h2>
+  <p>Locations that previously drained effectively begin retaining water after each cycle. The interval required for soil to release excess moisture shortens over time.</p>
+  <p>The same areas remain darker and wetter between waterings, indicating reduced drainage recovery.</p>
+
 
   <h2>Roots lose access to oxygen</h2>
   <p>When soil pores stay filled with water, air disappears from the root zone. Growth slows even with steady moisture.</p>
