--- a/tools-safety/common-lawn-tool-myths.html
+++ b/tools-safety/common-lawn-tool-myths.html
@@ -84,9 +84,10 @@
   <p>Rough borders are blamed on grass or soil instead of tool behavior.</p>
   <p>This reflects <a href="/tools-safety/why-trimmers-damage-grass-edges.html">Why Trimmers Damage Grass Edges</a>, where contact patterns matter.</p>
 
-  <h2>The constraint becomes belief lock-in</h2>
-  <p>Once myths guide behavior long enough, damage accumulates without challenge. Correction arrives too late.</p>
-  <p>You notice consistent problems that never fully resolve.</p>
+  <h2>Entrenched beliefs prevent corrective change</h2>
+  <p>When untested assumptions guide behavior over time, errors repeat without interruption. Each cycle compounds impact until adjustment no longer restores function.</p>
+  <p>Recurring failures persist despite repeated attempts to address surface symptoms.</p>
+
 
   <h2>After the boundary, effort increases without improvement</h2>
   <p>People work harder to overcome results caused by false assumptions.</p>
