--- a/tools-safety/how-children-get-hurt-around-lawn-tools.html
+++ b/tools-safety/how-children-get-hurt-around-lawn-tools.html
@@ -56,9 +56,10 @@
 <main class="container">
   <h1>How Children Get Hurt Around Lawn Tools</h1>
 
-  <h2>Injuries start when boundaries stop being obvious</h2>
-  <p>Yard work creates moving hazards that depend on clear separation. When boundaries are no longer obvious, children drift into active zones without realizing the danger.</p>
-  <p>You notice a child stepping closer because nothing looks different from the rest of the yard.</p>
+  <h2>Injuries begin once visible boundaries disappear</h2>
+  <p>Active yard work relies on clear physical separation between hazards and safe areas. When visual or spatial boundaries fade, children can enter operating zones without recognizing risk.</p>
+  <p>Children move closer to active equipment because the environment offers no clear visual cue that conditions have changed.</p>
+
 
   <h2>Noise masks distance and speed</h2>
   <p>Engines flatten sound cues that normally signal approach. Motion looks slower than it is when everything is loud.</p>
